--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,12 @@
 		    <artifactId>poi-ooxml</artifactId>
 		    <version>5.2.0</version>
 		</dependency>
+		 <dependency>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-clean-plugin</artifactId>
+			<version>2.5</version>
+			<type>maven-plugin</type>
+    		</dependency>
 	</dependencies>
 	<properties>
    		<maven.compiler.source>6</maven.compiler.source>
